--- a/mission1.css
+++ b/mission1.css
@@ -1,8 +1,107 @@
+
 .container{
-  
-    max-width: 1088px;
-    margin: 0 auto;
-    border: 1px solid rgb(0, 255, 76);
     
+    max-width: 940px;
+    margin: 0 auto;
+    margin-top: 36px;
+    border: 1px solid rgb(0, 255, 76);
+    box-sizing: border-box;
+}
+.top{
+    display: flex;
+    justify-content: space-between;
+}
+.top img{
+    width: 25%;
+}
+.shopcart img{
+    
+    width: 24px;
+    height: 24px;
+    }
+  
+.top-right ul{
+    /* position: relative; */
+    display: flex;
+    justify-content: space-around;
+    gap:60px;
+   
+    
+    
+}
+.top-right a{
+    text-decoration: none;
+}
+.top-right {
+    position: relative;
+    display: flex;
+    gap:79px;
+    padding-top: 10px;
+}
+.hero-banner{
+    position: relative;
+    /* background-size: cover; */
+    background-repeat: no-repeat;
+    background-image: url("https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/banner.png");
+    width: 100%;
+    padding-bottom: 440px;
+    
+}
+
+.category{
+
+    position: relative;
+    margin-top: 60px;
+    
+    /* width: 50%; */
+    text-align: center;
+    font-size: 24px;
+    color: #EAF0ED;
+    background-color: #3F5D45;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.main{
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    width: 100%;
+
+}
+.menu{
+    position: relative;
+    width: 30%;
+}
+.menu-item{
+    position: relative;
+    font-family: PingFang TC;
+    font-weight: bold;
+    /* width: 50%; */
+    text-align: center;
+    font-size: 24px;
+    color: #3F5D45;
+    background-color: #EAF0ED;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.product-list ul{
+    position: relative;
+    padding-top: 60px;
+    display:flex;
+    justify-content:space-between   ;
+    flex-wrap: wrap;
+    /* width: 100%; */
+    width: 620px;
+}
+.product-item{
+
+    position: relative;
+    width: 100%;
+    height: 306px;
+    background-image:url("https://raw.githubusercontent.com/Ceckmateeeee21/hexSchool/main/IMG/mission1/student-week1/p-1.png") ;
+}
+.product-name{
+    position: relative;
+    display: flex;
 
 }
