--- a/mission1.css
+++ b/mission1.css
@@ -106,6 +106,20 @@
     width: 48%;
 
 }  
+.heart{
+    z-index: 1;
+    position: absolute;
+    right:0px;
+}
+.speChoice span{
+    z-index: 1;
+    position: absolute;
+    left:0px;
+    background-color: #3F5D45;
+    padding:10px;
+    color: #EAF0ED;
+    writing-mode:vertical-lr;
+}
 .product-item2{
 
     position: relative;
@@ -188,13 +202,66 @@
 }
 .pg-number{
     position: relative;
-    display: flex;
-    text-align: center; 
+    /* display: flex;
+    justify-content: center;
+    text-align:center;
+     */
     
 }
 .pg-number .p1{
+    box-sizing: border-box;
     position: relative;
+    width: 60px;
+    height: 60px;
     
+    background-color: #3F5D45;
+    padding-top :16px;
+}
+.pg-number .p1 a{
+    text-decoration: none;
+    color: #EAF0ED;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+    
+    /* display: flex;
+    justify-content: center;
+    text-align:center; */
+}
+.pg-number .p2{
+    box-sizing: border-box;
+    position: relative;
+    width: 60px;
+    height: 60px;
+    
+    background-color: #EAF0ED;
+    padding-top :16px;
+}
+.pg-number .p2 a{
+    text-decoration: none;
+    color: #3F5D45;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
+}
+.pg-number .p3{
+    box-sizing: border-box;
+    position: relative;
+    width: 60px;
+    height: 60px;
+    
+    background-color: #EAF0ED;
+    padding-top :16px;
+}
+.pg-number .p3 a{
+    text-decoration: none;
+    color: #3F5D45;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+
 }
 .img1 img{
     position: relative;
