--- a/mission1.css
+++ b/mission1.css
@@ -266,13 +266,52 @@
     text-align: center;
 
 }
+.img1 {
+
+    position: relative;
+    width:60px;
+    height: 60px;
+    display: flex;
+    justify-content: right;
+  
+    
+}
+.img1 a{
+    position: relative;
+    width:60px;
+    height: 60px;
+}
 .img1 img{
+    position: absolute;
+    top:16px;
+    left:16px;
+    
+}
+
+/* .img2 img{
     position: relative;
     width: 100%;
+    height: 60px;
+} */
+
+.img2 {
+
+    position: relative;
+    width:60px;
+    height: 60px;
+    display: flex;
+    justify-content: right;
+  
+    
+}
+.img2 a{
+    position: relative;
+    width:60px;
     height: 60px;
 }
 .img2 img{
-    position: relative;
-    width: 100%;
-    height: 60px;
+    position: absolute;
+    top:16px;
+    left:16px;
+    
 }
