--- a/mission1Record.css
+++ b/mission1Record.css
@@ -2,7 +2,7 @@
     /* max-width: 100%; */
     max-width: 40%;
     margin: 0 auto;
-    border: 1px solid blueviolet;
+    /* border: 1px solid blueviolet; */
    
 }
 .product-list{
