--- a/test.css
+++ b/test.css
@@ -177,14 +177,19 @@
    padding-top:3%;
     padding-bottom:5%;
   }
+  .role-para ul li{
+    width: 25%;
+  }
   .role-para ul li img{
   /*   width:25%; */
+  
     box-sizing: border-box;
     padding-bottom:1%;
     border-radius:10px 10px 0px 0px;
     /*上下左右*/
   }
   .role-para ul{
+    
      position:relative;
   /*    width:100%; */
     display:flex;
@@ -212,6 +217,16 @@
     padding-right:5%;
     color:#221E1F;
   }
+  .roleP2{
+    /*    width:25%; */
+      box-sizing: border-box;
+      font-size:16px;
+      text-align:center;
+      padding-bottom:5%;
+      /* padding-left:5%;
+      padding-right:5%; */
+      color:#221E1F;
+    }
 /*data-pool*/
 
 data-pool{
@@ -657,6 +672,10 @@ padding-right: 461px; */
     box-sizing: border-box;
     padding-left:5%;
     padding-right:5%;
+  }
+  .role-para ul li{
+    width: 100%;
+    box-sizing: border-box;
   }
     /* .data-item{
         margin-bottom: 20px;
