--- a/test.css
+++ b/test.css
@@ -6,7 +6,7 @@
     /* max-width: 100%; */
     max-width: 1088px;
     margin: 0 auto;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     /* padding: 15px; */
     /* margin-left:140px;
     margin-right:140px; */
