--- a/test.css
+++ b/test.css
@@ -616,7 +616,9 @@ padding-right: 461px; */
     font-size: 18px;
     border: none;
     outline: none;
-    background-color: green;
+    /* background-color: green; */
+    background-color: #56C4C5;
+    font-weight: bold;
     color: white;
     cursor: pointer;
     padding: 15px;
